--- a/_subscribe.html
+++ b/_subscribe.html
@@ -1,5 +1,5 @@
 <form method='post' action='https://blogtrottr.com'>
-  <p>Enjoy this blog? Get notified of new posts via email:</p>
+  <p>Get notified of new posts via email:</p>
   <input type='text' name='btr_email' />
   <input type='hidden' name='btr_url'
          value='https://datamotto.com/index.xml'/>
