--- a/_assets/welcome_page.html
+++ b/_assets/welcome_page.html
@@ -393,7 +393,7 @@ summary {
 </div>
 
 
-<style>
+<style type="text/css">
 .blue-dot {
   height: 15px;
   width: 15px;
@@ -418,13 +418,12 @@ html, body {
 h1 {
     margin:0;
 }
-
 </style>
-<p><br> <br></p>
-<div style="background-color: #fffbfc; text-align: center; letter-spacing: 2px;">
-<p><span style="font-size: 55px; color: #ff72a3; line-height:10px;">Share Efficiently</span> <br> your Data Experience</span> <br></p>
-<p><span style="letter-spacing: 2px;"> <i class="fab fa-r-project"></i> <span class="blue-dot"></span>: 2 <i class="fab fa-python"></i> <span class="yellow-dot"></span>: 2 </span></p>
-<p>Follow <span style="color: #005678">Data Motto</span> on <a href="https://twitter.com/DataMotto" class="fa fa-twitter" style="color: #55ACEE; font-size:15px; padding: .5em;"></a> &amp; <a href="https://www.linkedin.com/company/datamotto" class="fa fa-linkedin" style="color: #007bb5; font-size:15px; padding: .5em;"></a></p>
+<div style="text-align: center; letter-spacing: 2px; line-height: 4rem;">
+<p><span style="font-size: 55px; color: #ec5874; line-height:10px;">Share Efficiently <br> Your Data Experience</span> <br></p>
+<p><span style="letter-spacing: 2px;"> <span class="blue-dot"></span> <i class="fab fa-r-project"></i>: 2 <span class="yellow-dot"></span> <i class="fab fa-python"></i>: 2 </span></p>
+<p>Follow <span style="color: #005678">Data Motto</span> on <a href="https://twitter.com/DataMotto" class="fa fa-twitter" style="color: #55ACEE; font-size:18px; padding: .5em;"></a> &amp; <a href="https://www.linkedin.com/company/datamotto" class="fa fa-linkedin" style="color: #007bb5; font-size:18px; padding: .5em;"></a></p>
+<p>Join our online community at <a href="https://Datamotto.slack.com" class="fa fa-slack" style="color: #55ACEE; font-size:18px; padding: .5em;"></a></p>
 </div>
 
 
