--- a/_assets/cart.html
+++ b/_assets/cart.html
@@ -1,15 +1,35 @@
 <html>
   <body>
     <div id="app" class="mb-5">
-      <div class="container">
+      <div v-if="initializing">
+        initiallize....
+      </div>
+      <div v-else class="container">
         <div class="row justify-content-center d-flex">
-          <div v-for="(item, index) in postData" :key="index" class="col-md-4 mb-md-0 mb-2">
+          <form>
+            <div class="form-check">
+              <input v-model="search.python" type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">python</label>
+            </div>
+
+            <div class="form-check">
+              <input v-model="search.sql" type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Sql</label>
+            </div>
+
+            <div class="form-group">
+              <label>title :</label>
+              <input type="text" v-model="search.title" class="form-control" >
+            </div>
+          </form>
+
+          <div v-for="(item, index) in filter" :key="index" class="col-md-4 mb-md-0 mb-2">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">{{item.title}}</h5>
                 <span class="badge badge-info bg-info">{{item.categories}}</span>
                 <p class="card-text mt-2">{{item.description}}</p>
-                <img src="../images/R_icon.png" style="width:2em;" />
+                <!-- <img src="../images/R_icon.png" /> -->
               </div>
           </div>
         </div>
@@ -17,27 +37,62 @@
     </div>
   </body>
   <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdeli vr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
 
   <script>
     var app = new Vue({
       el: '#app',
       data: {
+        initializing: true,
         items: null,
-        postData: null
+        test: "Visualization",
+        postData: null,
+        search:{
+          python: false,
+          sql: false,
+          title: null
+        }
       },
-      mounted() {
-        $.get( '../posts.json', ( data ) => {
-          const values = Object.values(data)
-          this.postData = values
-          console.log(this.postData)
+      created() {
+        axios
+        .get( '../posts.json').then(item => {
+          this.initializing = false
+          const values = Object.values(item.data)
+          values.map(res => {
+            if((typeof res.tech) === 'string') {
+              res.tech = res.tech.split()
+            } 
+          })
+          this.postData = values 
         })
+      },
+      computed: {
+        filter() {
+          let test = this.postData.filter(item => {    
+            if (this.search.title) {
+              if (item.title.includes(this.search.title)) return true
+              return false
+            }
+            if (this.search.python) {
+              if (item.tech.includes("Python")) return true
+              return false
+            }
+            if (this.search.sql) {
+              if (item.tech.includes("Sql")) return true
+              return false
+            }
+            return true
+          })
+          console.log(test)
+          return test
+        }
       }
     })
   </script>
