--- a/_assets/firstTop.html
+++ b/_assets/firstTop.html
@@ -60,10 +60,23 @@
 					50% { background-position: 400% 0; }
 					100% { background-position: 0 0; }
 			}
-			@media screen and (max-width: 541px) {
+			@media screen and (min-width: 541px) {
+				.hero-fullscreen{
+					padding-bottom: 0;
+					width: 100%;
+					height: 100%;
+					top: 0;
+					left: 0;
+					overflow: hidden;
+					background-position: center center;
+					background-repeat: no-repeat;
+					-webkit-background-size: cover;
+					background-size: cover;
+					z-index: 0;
+				}
 			.title{
 					font-size: 160%!important;
-					margin-top: 235px;
+					margin-top: 80px;
 					color: #044f6b;
 					line-height:10px; 
 					font-family: 'Noto Serif JP';
