--- a/_assets/cart.html
+++ b/_assets/cart.html
@@ -23,13 +23,19 @@
             </div>
           </form>
 
-          <div class="row">
+          <div class="row justify-content-center">
             <div v-for="(item, index) in filter" :key="index" class="card-deck col-md-4 p-3 mb-3 bg-white rounded border-0 bg-white rounded" style="width: 18rem;">
               <div class="card" style="width: 18rem;">
                 <img class="card-img-top" style="height: 176px;" src="https://www.datamotto.com/posts/Python/2020-12-30-new-york-taxi-fare-rate/new-york-taxi-fare-rate_files/figure-html5/unnamed-chunk-4-1.png" alt="Card image cap">
                 <div class="card-body shadow rounded border-0">
                   <h5 class="card-title">{{item.title}}</h5>
-                  <span class="text-muted"> <em> {{item.date}} </em> </span>
+                  <span class="text-muted">
+                    <em> {{item.date}} </em> 
+                    <i v-if='showR(item.tech)' class="fab fa-r-project"></i>
+                    <i v-if='showPython(item.tech)' class="fab fa-python"></i>  
+                    <i v-if="showSql(item.tech)" class="fas fa-database"></i>        
+                  </span>
+            
                   <div>
                     <span v-if="item.categories" class="badge card-text badge-info bg-info">{{item.categories}}</span>
                     <span v-if="item.packages" class="badge card-text badge-info bg-warning">{{item.packages}}</span>
@@ -105,7 +111,21 @@
         }
       },
       methods: {
-        postUrl(post){
+        showR(item) {
+          item.map(res=> {
+            if(item.find(i => i == 'R')) return true
+            else return false
+          })
+        },
+        showPython(item) {
+          if(item.find(i => i == 'Python')) return true
+          else return false
+        },
+        showSql(item) {
+          if(item.find(i => i == 'Sql')) return true
+          else return false
+        },
+        postUrl(post) {
           return './posts' + post.date + '-' + (post.title.toLocaleLowerCase()).replace(/ /g,"-")
         }
       }
