--- a/_assets/firstTop.html
+++ b/_assets/firstTop.html
@@ -1,65 +1,6 @@
 <html>
 	<head>
 		<style>
-			.glow-on-hover {
-					width: 220px;
-					height: 50px;
-					border: none;
-					outline: none;
-					color: #fff;
-					background: #111;
-					cursor: pointer;
-					position: relative;
-					z-index: 0;
-					border-radius: 10px;
-			}
-			
-			.glow-on-hover:before {
-					content: '';
-					background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-					position: absolute;
-					top: -2px;
-					left:-2px;
-					background-size: 400%;
-					z-index: -1;
-					filter: blur(5px);
-					width: calc(100% + 4px);
-					height: calc(100% + 4px);
-					animation: glowing 20s linear infinite;
-					opacity: 0;
-					transition: opacity .3s ease-in-out;
-					border-radius: 10px;
-			}
-			
-			.glow-on-hover:active {
-					color: #000
-			}
-			
-			.glow-on-hover:active:after {
-					background: transparent;
-			}
-			
-			.glow-on-hover:before {
-					opacity: 1;
-			}
-			
-			.glow-on-hover:after {
-					z-index: -1;
-					content: '';
-					position: absolute;
-					width: 100%;
-					height: 100%;
-					background: #111;
-					left: 0;
-					top: 0;
-					border-radius: 10px;
-			}
-			
-			@keyframes glowing {
-					0% { background-position: 0 0; }
-					50% { background-position: 400% 0; }
-					100% { background-position: 0 0; }
-			}
 			@media screen and (min-width: 541px) {
 				.hero-fullscreen{
 					padding-bottom: 0;
@@ -85,12 +26,11 @@
 			}
 			.title{
 					font-size: 200%;
-					color: #044f6b;
+					color: #ffff;
 					font-family: 'Noto Serif JP';
 					text-align: center;
 			}
 			.upper-page {
-				margin-top: -87px;
 				position: relative;
 				width: 100%;
 				height: 100%;
@@ -100,7 +40,8 @@
 			}
 			
 			.hero-fullscreen {
-					padding-bottom: 310px;
+					background: #0f2e3d;
+					padding-bottom: 230px;
 					width: 100%;
 					height: 100%;
 					top: 0;
@@ -204,9 +145,8 @@
 	<body>
 		<div id="home">
 			<div class="upper-page">
-				<div class="hero-fullscreen" 
-					v-bind:style="image ? 'background-image: url(../images/toppage.gif);' :'background-image: url(../images/toppage2.jpg);'">
-						<h6 class="title" style="margin-top: 302px;">
+				<div class="hero-fullscreen" >
+						<h6 class="title" style="margin-top: 170px!important;">
 							Share Efficiently
 									</h6>
 									<h6 class="title">
@@ -216,8 +156,7 @@
 										<button class="glow-on-hover" type="button">See Posts !</button>
 									</div> -->
 								</div>
-						<div>
-				</div>    
+					<img class="d-sm-block d-none" src="../images/banner.png" alt="Card image cap" style="margin-top: -11.5%;">				  
 			</div>
 		</div>
 
