--- a/_assets/footer.html
+++ b/_assets/footer.html
@@ -14,7 +14,7 @@
     display: none!important;
   }
   .col_white_amrc { color:#FFF;}
-  footer {width:100%; background-image: linear-gradient(to right, #007cba , #fdd835); min-height:250px; padding:60px 0px 25px 0px ;}
+  footer {width:100%; background: #0F2E3D; min-height:162px; padding:60px 0px 25px 0px ;}
   .pt2 { padding-top:40px ; margin-bottom:20px ;}
   footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
   .mb10 { padding-bottom:15px ;}
@@ -54,15 +54,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <!--footer starts from here-->
-<footer class="footer">
+<footer class="footer py-2">
 <div class="container">
 <ul class="foote_bottom_ul_amrc">
 <li><a href="/">Home</a></li>
 <li><a href="#">About</a></li>
-<li><a href="#">Services</a></li>
-<li><a href="#">Pricing</a></li>
-<li><a href="#">Blog</a></li>
-<li><a href="#">Contact</a></li>
 </ul>
 <!--foote_bottom_ul_amrc ends here-->
 <p class="text-center">Copyright @2021 | Designed With by Data Motto</p>
@@ -70,6 +66,7 @@
 <ul class="social_footer_ul">
 <li><a href="https://github.com/ardeeshany/DataMotto.github.io"><i class="fab fa-github"></i></a></li>
 <li><a href="https://app.slack.com/client/T01HNRM6JTG/G01J57QQS6S"><i class="fab fa-slack-hash"></i></a></li>
+<li><a href="https://app.slack.com/client/T01HNRM6JTG/G01J57QQS6S"><i class="fab fa-twitter"></i></a></li>
 <!-- <li><a href="http://webenlance.com"><i class="fab fa-linkedin"></i></a></li>
 <li><a href="http://webenlance.com"><i class="fab fa-instagram"></i></a></li> -->
 </ul>
