--- a/_assets/footer.html
+++ b/_assets/footer.html
@@ -58,7 +58,7 @@
 <div class="container">
 <ul class="foote_bottom_ul_amrc">
 <li><a href="/">Home</a></li>
-<li><a href="#">About</a></li>
+<li><a href="about.html">About</a></li>
 </ul>
 <!--foote_bottom_ul_amrc ends here-->
 <p class="text-center">Copyright @2021 | Designed With by Data Motto</p>
